work in search bloggers info

--- a/src/scss/UI/catalog__blogger.scss
+++ b/src/scss/UI/catalog__blogger.scss
@@ -307,23 +307,15 @@
                 font-size: 13px;
                 line-height: 28px;
                 font-weight: 300;
-                border: 1px solid #dadada;
+                border: 1px solid #69ddca;
                 border-radius: 14px;
                 color: #000000;
                 transition: all 0.5s;
                 margin-left: 7.5px;
                 margin-right: 7.5px;
-                cursor: pointer;
+                background-color: #69ddca;
                 &:hover {
-                    border-color: #69ddca;
-                }
-                &.active {
-                    color: #000;
-                    background: #69ddca;
-                    border-color: #69ddca;
-                    &:hover {
-                        background: #fff;
-                    }
+                    background-color: #fff;
                 }
             }
         }
