--- a/src/scss/search-bloggers/search-bloggers.scss
+++ b/src/scss/search-bloggers/search-bloggers.scss
@@ -7,6 +7,7 @@
     .catalog-blogger {
         &__left {
             display: flex;
+            flex-direction: column;
         }
         &__right {
 
