--- a/src/scss/blogger/charts__list.scss
+++ b/src/scss/blogger/charts__list.scss
@@ -6,8 +6,14 @@
     &-item {
         width: 32%;
         margin-top: 25px;
-        outline: 1px solid #ff0000;//
-        height: 200px;//
+        // outline: 1px solid #ff0000;
+        height: 200px;
+        display:flex;
+    }
+    &-doughnut {
+        width:138px;
+        height:138px;
+        align-self: center;
     }
 }
 
