work in freelancer page 04.05.2021

--- a/src/scss/blogger/analytics.scss
+++ b/src/scss/blogger/analytics.scss
@@ -63,7 +63,8 @@
         margin-top: 8px;
         width: 1060px;
         height: 239px;
-        outline: 1px solid #ff0000;//
+        display: block;
+        // outline: 1px solid #ff0000;
     }
 }
 
