--- a/src/scss/blogger/charts__list.scss
+++ b/src/scss/blogger/charts__list.scss
@@ -7,7 +7,7 @@
         width: 32%;
         margin-top: 25px;
         // outline: 1px solid #ff0000;
-        height: 200px;
+        // height: 200px;
         display:flex;
     }
     &-doughnut {
