--- a/src/scss/UI/phone.scss
+++ b/src/scss/UI/phone.scss
@@ -17,3 +17,14 @@
         }
     }
 }
+
+@media (max-width: 500px) {
+    .phone {
+        width: 50px;
+        height: 50px;
+        &__svg {
+            width: 50px;
+            height: 50px;
+        }
+    }
+}
