--- a/src/scss/UI/up.scss
+++ b/src/scss/UI/up.scss
@@ -19,3 +19,15 @@
         }
     }
 }
+
+
+@media (max-width: 500px) {
+    .up {
+        width: 50px;
+        height: 50px;
+        &__svg {
+            width: 50px;
+            height: 50px;
+        }
+    }
+}
