--- a/src/scss/main/main-3.scss
+++ b/src/scss/main/main-3.scss
@@ -86,6 +86,21 @@
     }
 }
 
+@media (max-width: 1100px) {
+    .main-3 {
+        &__item {
+            margin-right: 0;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .main-3 {
+        &__wrap {
+            width: 100%;
+        }
+    }
+}
 
 @media (max-width: 767px) {
     .main-3 {
@@ -98,16 +113,12 @@
             align-items: center;
         }
         &__item {
-            margin: 0 0 10px 0;
+            margin: 0;
             width: 100%;
             height: auto;
             &:last-child {
                 margin: 0;
             }
-        }
-        &__img {
-            width: 100%;
-            height: auto;
         }
     }
 }
