developen in freelancer page

--- a/src/scss/blogger/blogger.scss
+++ b/src/scss/blogger/blogger.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     width: 100%;
     padding-top: 13px;
+    padding-bottom: 45px;
     background-image: linear-gradient(to bottom, #ffe500 0, #ffe500 235px, #f2f2f2 235px, #f2f2f2 100%);
     &__wrap {
         width: 1120px;
