--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,7 +1,9 @@
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
-    src: url('../fonts/SFProDisplay-Thin.ttf') format('truetype');
+    // src: url('../fonts/SFProDisplay-Thin.ttf') format('truetype');
+    src: url('../fonts/SFProDisplay-Thin.woff2') format('woff2'),
+         url('../fonts/SFProDisplay-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
 }
@@ -15,7 +17,8 @@
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
-    src: url('../fonts/SFProDisplay-Ultralight.ttf') format('truetype');
+    src: url('../fonts/SFProDisplay-Ultralight.woff2') format('woff2'),
+          url('../fonts/SFProDisplay-Ultralight.woff') format('woff');
     font-weight: 200;
     font-style: normal;
 }
@@ -29,7 +32,8 @@
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
-    src: url('../fonts/SFProDisplay-Light.ttf') format('truetype');
+    src: url('../fonts/SFProDisplay-Light.woff2') format('woff2'),
+          url('../fonts/SFProDisplay-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
@@ -43,7 +47,8 @@
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
-    src: url('../fonts/SFProDisplay-Regular.ttf') format('truetype');
+    src: url('../fonts/SFProDisplay-Regular.woff2') format('woff2'),
+          url('../fonts/SFProDisplay-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -54,13 +59,14 @@
 //     font-weight: normal;
 //     font-style: italic;
 // }
-// @font-face {
-//     font-family: 'SF Pro Display';
-//     font-display: swap;
-//     src: url('../fonts/SFProDisplay-Medium.ttf') format('truetype');
-//     font-weight: 500;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'SF Pro Display';
+    font-display: swap;
+    src: url('../fonts/SFProDisplay-Medium.woff2') format('woff2'),
+         url('../fonts/SFProDisplay-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
 // @font-face {
 //     font-family: 'SF Pro Display';
 //     font-display: swap;
@@ -85,7 +91,8 @@
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
-    src: url('../fonts/SFProDisplay-Bold.ttf') format('truetype');
+    src: url('../fonts/SFProDisplay-Bold.woff2') format('woff2'),
+          url('../fonts/SFProDisplay-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
@@ -99,7 +106,8 @@
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
-    src: url('../fonts/SFProDisplay-Heavy.ttf') format('truetype');
+    src: url('../fonts/SFProDisplay-Heavy.woff2') format('woff2'),
+        url('../fonts/SFProDisplay-Heavy.woff') format('woff');
     font-weight: 800;
     font-style: normal;
 }
@@ -120,7 +128,8 @@
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
-    src: url('../fonts/SFProDisplay-Black.ttf') format('truetype');
+    src: url('../fonts/SFProDisplay-Black.woff2') format('woff2'),
+          url('../fonts/SFProDisplay-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
 }
@@ -171,7 +180,8 @@
 @font-face {
     font-family: 'Poppins';
     font-display: swap;
-    src: url('../fonts/Poppins-Regular.ttf') format('truetype');
+    src: url('../fonts/poppins-v15-latin-regular.woff2') format('woff2'),
+         url('../fonts/poppins-v15-latin-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -213,7 +223,8 @@
 @font-face {
     font-family: 'Poppins';
     font-display: swap;
-    src: url('../fonts/Poppins-Bold.ttf') format('truetype');
+    src: url('../fonts/poppins-v15-latin-700.woff2') format('woff2');
+    src: url('../fonts/poppins-v15-latin-700.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
