--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -141,6 +141,7 @@
 					border-radius: 50%;
 					border: 2px solid #74dfce;
 					box-shadow: 0 0 25px 0 rgba(116, 223, 206, 0.50);
+					object-fit: cover;
 				}
 			}
 			&-info {
