--- a/src/scss/UI/catalog__blogger.scss
+++ b/src/scss/UI/catalog__blogger.scss
@@ -62,6 +62,7 @@
                 border-radius: 50%;
                 border: 2px solid #74dfce;
                 box-shadow: 0 0 25px 0 rgba(116, 223, 206, 0.50);
+                object-fit: cover;
             }
             &-link {
                 color: #000;
