--- a/src/scss/blogger/blogger.scss
+++ b/src/scss/blogger/blogger.scss
@@ -14,6 +14,8 @@
         background-color: #ffffff;
     }
     &__left {
+        max-width: 280px;
+        height: auto;
         position: relative;
     }
     &__right {
@@ -34,7 +36,8 @@
         }
     }
     &__avatar {
-        width: 280px;
+        width: 100%;
+        height: 100%;
         border-radius: 50%;
         border: 2px solid #74dfce;
         box-shadow: 0 0 25px 0px rgba(116, 223, 206, 0.5)
