--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -59,14 +59,14 @@
 //     font-weight: normal;
 //     font-style: italic;
 // }
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-Medium.woff2') format('woff2'),
-         url('../fonts/SFProDisplay-Medium.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-Medium.woff2') format('woff2'),
+//          url('../fonts/SFProDisplay-Medium.woff') format('woff');
+//     font-weight: 500;
+//     font-style: normal;
+// }
 // @font-face {
 //     font-family: 'SF Pro Display';
 //     font-display: swap;
