--- a/src/scss/blogger/specification.scss
+++ b/src/scss/blogger/specification.scss
@@ -58,6 +58,7 @@
             line-height: 24px;
             font-weight: 300;
             color: #666666;
+            white-space: break-spaces;
         }
     }
 }
