--- a/src/scss/blogger/blogger.scss
+++ b/src/scss/blogger/blogger.scss
@@ -14,8 +14,8 @@
         background-color: #ffffff;
     }
     &__left {
-        max-width: 280px;
-        height: auto;
+        width: 280px;
+        height: 280px;
         position: relative;
     }
     &__right {
@@ -36,8 +36,9 @@
         }
     }
     &__avatar {
-        width: 100%;
-        height: 100%;
+        width: 280px;
+        height: 280px;
+        object-fit: cover;
         border-radius: 50%;
         border: 2px solid #74dfce;
         box-shadow: 0 0 25px 0px rgba(116, 223, 206, 0.5)
