--- a/src/scss/blogger/posts.scss
+++ b/src/scss/blogger/posts.scss
@@ -131,6 +131,7 @@
             position: relative;
             font-size: 13px;
             font-weight: 300;
+            padding-left: 20px;
         }
         &-svg {
             margin-right: 5px;
@@ -162,6 +163,11 @@
             }
             &-button {
                 font-size: 14px;
+            }
+        }
+        &__info {
+            &-item {
+                padding-left: 0;
             }
         }
     }
