--- a/src/scss/blogger/services.scss
+++ b/src/scss/blogger/services.scss
@@ -32,6 +32,7 @@
         position: relative;
         display: flex;
         justify-content: space-between;
+        cursor: pointer;
         &:nth-child(-n+3) {
             border: 3px solid #69ddca;
         }
