--- a/src/scss/search-bloggers/search-bloggers.scss
+++ b/src/scss/search-bloggers/search-bloggers.scss
@@ -153,7 +153,7 @@
         top: 88px;
         left: 2px;
         z-index: 1;
-        box-shadow: 1px 1px 4px;
+        box-shadow: 1px 1px 3px;
         &-item {
             font-family: "SF Pro Display",Arial,sans-serif;
             font-size: 16px;
@@ -309,10 +309,24 @@
 @media (max-width: 768px) {
     .search-bloggers {
         .catalog-blogger__item-rating-chart {
-            top: 130px;
+            top: 150px;
+            right: 35px;
+            width: 70px;
+            height: 70px;
+        }
+        .favorit-button .catalog-blogger__item-rating-chart {
+            top: 196px;
         }
     }
 }
+@media (max-width: 640px) {
+    .search-bloggers {
+        &__nav {
+            top: 51px;
+        }
+    }
+}
+
 
 @media (max-width: 500px) {
     .search-bloggers {
