--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -125,6 +125,17 @@
 					font-weight: 700;
 					font-size: 14px;
 					text-align: center;
+
+					&--active {
+						background: #ff29ab;
+						min-width: 20px;
+						min-height: 20px;
+						border-radius: 50px;
+						color: #fff;
+						max-width: 20px;
+						max-height: 20px;
+						line-height: 20px;
+					}
 				}
 			}
 			&:hover {
@@ -631,6 +642,14 @@
 						height: 40px;
 					}
 				}
+				.header__submenu {
+					display: block !important;
+				}
+				&:hover {
+					.header__submenu {
+						display: none;
+					}
+				}
 			}
 		}
 		&__wrap {
@@ -710,6 +729,7 @@
 			}
 		}
 		&__submenu {
+			// display: block;
 			border: 0;
 			&-item {
 				border: 0;
