--- a/src/scss/main/main-1.scss
+++ b/src/scss/main/main-1.scss
@@ -84,6 +84,9 @@
     .main-1 {
         &__wrap {
             width: 96%;
+            &::after {
+                border-bottom-width: 65px;
+            }
         }
         &__block {
             width: 96%;
@@ -108,6 +111,9 @@
         &__text {
             font-size: 16px;
         }
+        &__block {
+            width: 100%;
+        }
         .main-1__link {
             font-size: 14px;
             margin-right: 10px;
@@ -115,6 +121,13 @@
             &:last-child {
                 margin-right: 0;
             }
+        }
+    }
+}
+@media (max-width: 430px) {
+    .main-1 {
+        &__title {
+            font-size: 27px;
         }
     }
 }
