--- a/src/scss/blogger/blogger.scss
+++ b/src/scss/blogger/blogger.scss
@@ -101,7 +101,7 @@
             width: 20%;
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
         }
         &-title {
             font-family: "SF Pro Display", "Arial", sans-serif;
