--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -278,7 +278,7 @@
 		transition: all 300ms ease-in-out;
 		top: 100%;
 		margin-top: 25px;
-		display: none;
+		// display: none;
 		z-index: 3;
 		
 		&-item {
