--- a/src/scss/search-bloggers/range-slider.scss
+++ b/src/scss/search-bloggers/range-slider.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     align-content: flex-start;
+    overflow: hidden;
     
     &__input {
         pointer-events: none;
