--- a/src/scss/blog-list/blog-list.scss
+++ b/src/scss/blog-list/blog-list.scss
@@ -5,4 +5,41 @@
     &__wrap {
         width: 1171px;
     }
+    &__list {
+        display: grid;
+        &--first {
+            grid-template-rows: 2fr;
+            grid-template-columns: 1fr 1fr;
+            column-gap: 30px;
+            row-gap: 30px;
+            .grid-item {
+                &:nth-child(1) {
+                    width: 570px;
+                    height: 564px;
+                    grid-row-start: 1;
+                    grid-row-end: 3;
+                }
+                &:nth-child(2) {
+                    grid-row-start: 1;
+                    grid-row-end: 2;
+                }
+                &:nth-child(3) {
+                    grid-row-start: 2;
+                    grid-row-end: 3;
+                }
+                &:nth-child(2),
+                &:nth-child(3) {
+                    width: 570px;
+                    height: 267px;
+                }
+            }
+        }
+        &--second {
+            grid-template-columns: repeat(3, 370px);
+            column-gap: 30px;
+            .grid-item {
+                margin-top: 30px;
+            }
+        }
+    }
 }
