--- a/src/scss/blog-list/grid-item.scss
+++ b/src/scss/blog-list/grid-item.scss
@@ -1,21 +1,44 @@
 .grid-item {
-    width: 570px;
-    height: 564px;
+    width: 370px;
+    height: 370px;
     position: relative;
     border-radius: 15px;
     overflow: hidden;
     &:hover {
-        .grid-item__shadow {
-            opacity: 0;
+        .grid-item {
+            &__shadow {
+                opacity: 0;
+            }
+            &__block {
+                transform: translateY(0);
+            }
+            &__button {
+                transform: translateY(0);
+            }
+        }
+    }
+    &--small {
+        &:hover {
+            .grid-item {
+                &__shadow {
+                    opacity: 0;
+                }
+                &__block {
+                    transform: unset;
+                }
+                &__button {
+                    transform: unset;
+                }
+            }
         }
     }
     &__shadow {
         opacity: 0.4;
         background-color: #606060;
-        width: 570px;
-        height: 564px;
+        width: 100%;
+        height: 100%;
         position: relative;
-        transition: opacity 1s ease;
+        transition: opacity .5s ease;
     }
     &__img {
         position: absolute;
@@ -25,38 +48,51 @@
         position: absolute;
         bottom: 0;
         padding: 30px;
-        &-tag {
-            font-family: 'SF Pro Display';
-            font-style: normal;
-            font-weight: normal;
-            font-size: 14px;
-            line-height: 140%;
-            color: #363636;
+    }
+    &__block {
+        transform: translateY(57px);
+        transition: all .4s ease;
+    }
+    &__tag {
+        font-family: 'SF Pro Display';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 140%;
+        color: #363636;
 
-            width: fit-content;
-            border-radius: 14px;
-            background-color: #69DDCA;
-            padding: 5px 20px;
-        }
-        &-title {
-            font-family: 'SF Pro Display';
-            font-style: normal;
-            font-weight: bold;
-            font-size: 24px;
-            line-height: 29px;
-            color: #FFFFFF;
-            
-            margin-top: 20px;
-        }
-        &-descr {
-            font-family: 'SF Pro Display';
-            font-style: normal;
-            font-weight: normal;
-            font-size: 16px;
-            line-height: 140%;
-            color: #FFFFFF;
+        width: fit-content;
+        border-radius: 14px;
+        background-color: #69DDCA;
+        padding: 5px 20px;
+    }
+    &__title {
+        font-family: 'SF Pro Display';
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 29px;
+        color: #FFFFFF;
+        
+        margin-top: 20px;
+    }
+    &__descr {
+        font-family: 'SF Pro Display';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 140%;
+        color: #FFFFFF;
 
-            margin-top: 10px;
-        }
+        margin-top: 10px;
+    }
+    &__button {
+        width: 57px;
+        height: 57px;
+        background: #FFFFFF;
+        border-radius: 50%;
+        margin-top: 21px;
+        transform: translateY(200%);
+        transition: all .4s ease;
     }
 }
