--- a/src/scss/blog-list/blog-list.scss
+++ b/src/scss/blog-list/blog-list.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin-top: 80px;
+    margin-bottom: 100px;
     &__wrap {
         width: 1171px;
     }
