--- a/src/scss/blog-list/blog-list.scss
+++ b/src/scss/blog-list/blog-list.scss
@@ -38,11 +38,10 @@
             }
         }
         &--second {
+            margin-top: 30px;
             grid-template-columns: repeat(3, 370px);
             column-gap: 30px;
-            .grid-item {
-                margin-top: 30px;
-            }
+            row-gap: 30px;
         }
     }
     &__circle {
@@ -68,66 +67,122 @@
         color: #363636;
         cursor: pointer;
     }
-    @media (max-width: 1200px) {
-        .blog-list {
-            &__wrap {
-                width: 100%;
-                padding: 0 15px;
-            }
-            &__circle {
-                display: none;
-            }
-            &__list {
-                &--first {
-                    column-gap: 4%;
-                    row-gap: 30px;
-                    .grid-item {
-                        &:nth-child(1) {
-                            width: 100%;
-                            height: 564px;
-                            grid-row-start: 1;
-                            grid-row-end: 3;
-                        }
-                        &:nth-child(2) {
-                            grid-row-start: 1;
-                            grid-row-end: 2;
-                        }
-                        &:nth-child(3) {
-                            grid-row-start: 2;
-                            grid-row-end: 3;
-                        }
-                        &:nth-child(2),
-                        &:nth-child(3) {
-                            width: 100%;
-                            height: 267px;
-                        }
-                        &__img {
-                            width: 100%;
-                        }
+}
+
+@media (max-width: 1200px) {
+    .blog-list {
+        margin-top: 100px;
+        &__wrap {
+            width: 100%;
+            padding: 0 15px;
+        }
+        &__circle {
+            display: none;
+        }
+        &__list {
+            &--first {
+                column-gap: 2%;
+                row-gap: 20px;
+                .grid-item {
+                    &:nth-child(1) {
+                        width: 100%;
+                        height: 564px;
+                        grid-row-start: 1;
+                        grid-row-end: 3;
+                    }
+                    &:nth-child(2) {
+                        grid-row-start: 1;
+                        grid-row-end: 2;
+                    }
+                    &:nth-child(3) {
+                        grid-row-start: 2;
+                        grid-row-end: 3;
+                    }
+                    &:nth-child(2),
+                    &:nth-child(3) {
+                        width: 100%;
+                        height: 267px;
+                    }
+                    &__img {
+                        width: 100%;
+                        height: 100%;
                     }
                 }
-                &--second {
-                    grid-template-columns: repeat(2, 48%);
-                    column-gap: 4%;
+            }
+            &--second {
+                margin-top: 20px;
+                grid-template-columns: repeat(2, 49%);
+                column-gap: 2%;
+                row-gap: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 1000px) {
+    .blog-list {
+        &__list {
+            &--first {
+                .grid-item {
+                    &:nth-child(1) {
+                        height: auto;
+                    }
+                    &:nth-child(2),
+                    &:nth-child(3) {
+                        height: 230px;
+                    }
                 }
             }
         }
     }
-    @media (max-width: 1000px) {
-        .blog-list {
-            &__list {
-                &--first {
-                    .grid-item {
-                        &:nth-child(1) {
-                            height: auto;
-                        }
-                        &:nth-child(2),
-                        &:nth-child(3) {
-                            height: 230px;
-                        }
+}
+
+@media (max-width: 768px) {
+    .blog-list {
+        margin-top: 130px;
+        &__list {
+            &--first {
+                .grid-item {
+                    &:nth-child(1) {
+                        // height: auto;
+                    }
+                    &:nth-child(2),
+                    &:nth-child(3) {
+                        // height: 230px;
+                        height: 200px;
                     }
                 }
             }
+        }
+    }
+}
+
+@media (max-width: 550px) {
+    .blog-list {
+        margin-top: 30px;
+        margin-bottom: 80px;
+        &__list {
+            &--first {
+                grid-template-rows: 1fr;
+                grid-template-columns:1fr;
+                .grid-item {
+                    &:nth-child(1),
+                    &:nth-child(2),
+                    &:nth-child(3) {
+                        grid-row-start: unset;
+                        grid-row-end: unset;
+                        height: 300px;
+                    }
+                }
+            }
+            &--second {
+                grid-template-columns: 100%;
+                column-gap: 0;
+            }
+        }
+        &__more {
+            padding: 22px 80px 21px;
+            margin-top: 50px;
         }
     }
 }
